--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ arch = "^5.3.1"
 matplotlib = "^3.7.1"
 
 # Dev dependencies
+seaborn = "^0.12.2"
+tqdm = "^4.65.0"
+
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
 pytest-cov = "^3.0"
