--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "varfxi"
-version = "0.0.1"
+version = "0.0.2"
 description = "Volatility based estimation for FX interventions"
 authors = ["romainlafarguette <romain.lafarguette@gmail.com>", "amineraboun <amineraboun@gmail.com>"]
 repository ="https://github.com/romainlafarguette/varfxi"
@@ -25,6 +25,7 @@ matplotlib = "^3.7.1"
 # Dev dependencies
 seaborn = "^0.12.2"
 tqdm = "^4.65.0"
+openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
